# packaging-example

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  noxfile.py  objects.inv  pyproject.toml  sitemap.xml  test_nox.py
.github/workflows/: publish.yml  test.yml
_build/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/_sources/: index.md.txt
code-reference/: index.html
src/package/: rescale.py
tests/: test_rescale.py
