# contents of pyproject.toml

[project]
name = "package"
dependencies = [
    "numpy"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/package/_version.py"
