# contents of pyproject.toml

[project]
name = "package"
dependencies = [
    "numpy"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "pytest",
  "pre-commit"
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/package/_version.py"
